--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -14,11 +14,12 @@
         <td><%= admin.email %></td>
     </tr>
     <tr>
-        <td>Mobile</td>
+        <td>Phone Number</td>
         <td><%= admin.mobile %></td>
     </tr>
 </table>
 
 <a href="/admin/logout">Logout</a>
+
 
 <% include('../layouts/footer.ejs') %>
